kubernetes/platform/development/services/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-keycloak
  labels:
    app: polar-keycloak
spec:
  selector:
    matchLabels:
      app: polar-keycloak
  template:
    metadata:
      labels:
        app: polar-keycloak
    spec:
      containers:
        - name: polar-keycloak
          image: quay.io/keycloak/keycloak:23.0
          args:
            - 'start-dev'
            - '--import-realm'
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /realms/master
              port: 8080
            failureThreshold: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: polar-keycloak-config-volume
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: polar-keycloak-config-volume
          configMap:
            name: polar-keycloak

---
apiVersion: v1
kind: Service
metadata:
  name: polar-keycloak
  labels:
    app: polar-keycloak
spec:
  type: ClusterIP
  selector:
    app: polar-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: polar-keycloak
spec:
  rules:
    - host: polar-keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polar-keycloak
                port:
                  number: 80
